tests/pass/OrAssign.java
package pass;

public class OrAssign {
    public boolean orAssign(boolean a){
        boolean b = false;
        b |= a;
        return b;
    }    
}
